Fix directories so addresses match with eecs page

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <h1> EECS 448 </h1>
 <br>
 <a href="index_exercise1.html" class="button" id="button1">Exercise 1</a>
-<a href=" /EECS448_exercises/index_exercise2.html" class="button" id="button2">Exercise 2</a>
-<a href=" /EECS448_exercises/index_exercise3.html" class="button" id="button3">Exercise 3</a>
-<a href=" /EECS448_exercises/index_exercise4.html" class="button" id="button4">Exercise 4</a>
+<a href="index_exercise2.html" class="button" id="button2">Exercise 2</a>
+<a href="index_exercise3.html" class="button" id="button3">Exercise 3</a>
+<a href="index_exercise4.html" class="button" id="button4">Exercise 4</a>
 </center>
 
 </body>
