--- a/index.html
+++ b/index.html
@@ -1,48 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-	<link href="style.css"
-		rel = "stylesheet"
-		type = "text/css"/>
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-	<title>Victor Luiz da Silva</title>
-</head>
+<head> <title> Victor Luiz da Silva </title> </head>
 
 <body>
+	<br><br>
+	<center> 
+	<a href="http://www.ku.edu"><img alt="University of Kansas" src="http://www.ku.edu/assets/images/second-level/about/jayhawk-current.jpg"> </a><br><br>
+	<h3>
+	Victor Berger - KUID 2770737 <br><li> victorluiz@ku.edu</li>
+	<li><a href="http://github.com/vlbpdasilva">Github page</a></li></h3>
+	
+	</center>
 
-<br> <br> <br>
 
-<div class="container">
-   <div class="row">
-    <div class="col-sm-4">
-      <a href="http://ku.edu"><img src="jayhawk.png" width="300" height="266"></a>
-    </div>
-  
-    <div class="col-sm-8">
-      <br><br><br>
-      <center><font size = "6">Victor Luiz da Silva</font></center>
-      <p align =  "center"><font size = "4"><a href="http://github.com/vlbpdasilva"> Github </a></font</p>
-      
-    </div>
-  </div>
-</div>
 
-<br><hr><br>
 
-<center> 
-<h1> EECS 448 </h1>
-<br>
-<a href="index_exercise1.html" class="button" id="button1">Exercise 1</a>
-<a href="index_exercise2.html" class="button" id="button2">Exercise 2</a>
-<a href="index_exercise3.html" class="button" id="button3">Exercise 3</a>
-<a href="index_exercise4.html" class="button" id="button4">Exercise 4</a>
-</center>
 
-</body>
-</html>
+
+
+</body></html>
