Finish working on Lab 4

--- a/Lab4/index_exercise2.html
+++ b/Lab4/index_exercise2.html
@@ -2,46 +2,51 @@
 <html>
 <head>	
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link href="store_style.css"
+		rel = "stylesheet"
+		type = "text/css"/>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
   	<title>EECS 448 - Exercise 1</title>
 </head>
 
 <body>
+
 <h1>&nbsp; Welcome to the world's hardest quiz! </h1>
 <font size = "4">
 
-&nbsp; &nbsp; Question 1: What's 1+1?
+<h3>&nbsp; &nbsp; Question 1: What's 1+1?</h3>
 <form action="Quiz.php" method="post">
   &nbsp; &nbsp;<input type="radio" name="Q1_answer" value="1"> 1<br>
   &nbsp; &nbsp;<input type="radio" name="Q1_answer" value="2"> 2<br>
   &nbsp; &nbsp;<input type="radio" name="Q1_answer" value="3"> 3<br>
   &nbsp; &nbsp;<input type="radio" name="Q1_answer" value="4"> 4
 
-<br><br>
-&nbsp; &nbsp; Question 2: Which of these words starts with the letter A? <br>
+<br>
+<h3>&nbsp; &nbsp; Question 2: Which of these words starts with the letter A?</h3> 
 
   &nbsp; &nbsp;<input type="radio" name="Q2_answer" value="Banana"> Banana<br>
   &nbsp; &nbsp;<input type="radio" name="Q2_answer" value="Watermelon"> Watermelon<br>
   &nbsp; &nbsp;<input type="radio" name="Q2_answer" value="Apple"> Apple<br>
   &nbsp; &nbsp;<input type="radio" name="Q2_answer" value="Strawberry"> Strawberry
 
-<br><br>
-&nbsp; &nbsp; Question 3: Who was the 5th president of the United States? <br>
+<br>
+<h3>&nbsp; &nbsp; Question 3: Who was the 5th president of the United States?</h3> 
 
   &nbsp; &nbsp;<input type="radio" name="Q3_answer" value="James Madison"> James Madison<br>
   &nbsp; &nbsp;<input type="radio" name="Q3_answer" value="Andrew Jackson"> Andrew Jackson<br>
   &nbsp; &nbsp;<input type="radio" name="Q3_answer" value=" John Quincy Adams"> John Quincy Adams<br>
   &nbsp; &nbsp;<input type="radio" name="Q3_answer" value="James Monroe"> James Monroe
 
-<br><br>
-&nbsp; &nbsp; Question 4: Who holds the KU basketball record for most 3-pointers in a game with 11?
 <br>
+<h3>&nbsp; &nbsp; Question 4: Who holds the KU basketball record for most 3-pointers in a game with 11?
+</h3>
   &nbsp; &nbsp;<input type="radio" name="Q4_answer" value="Andrew Wiggins"> Andrew Wiggins<br>
   &nbsp; &nbsp;<input type="radio" name="Q4_answer" value="Mario Chalmers"> Mario Chalmers<br>
   &nbsp; &nbsp;<input type="radio" name="Q4_answer" value="Terry Brown"> Terry Brown<br>
   &nbsp; &nbsp;<input type="radio" name="Q4_answer" value=" Paul Pierce"> Paul Pierce
 <br><br>
-&nbsp; &nbsp; Question 5: Where is the EECS department located at KU?
-<br>
+<h3>&nbsp; &nbsp; Question 5: Where is the EECS department located at KU?</h3>
+
   &nbsp; &nbsp;<input type="radio" name="Q5_answer" value="Eaton Hall"> Eaton Hall<br>
   &nbsp; &nbsp;<input type="radio" name="Q5_answer" value="Snow Hall"> Snow Hall<br>
   &nbsp; &nbsp;<input type="radio" name="Q5_answer" value="Budig Hall"> Budig Hall<br>
