--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
 <br><hr><br>
 
 <center> 
-<h1> EECS 448 </h1>
+<h1> EECS 448  &mdash; Lab 3</h1>
 <br>
-<a href="index_exercise1.html" class="button" id="button1">Exercise 1</a>
-<a href="index_exercise2.html" class="button" id="button2">Exercise 2</a>
-<a href="index_exercise3.html" class="button" id="button3">Exercise 3</a>
-<a href="index_exercise4.html" class="button" id="button4">Exercise 4</a>
-</center>
+<a href="Lab3/index_exercise1.html" class="button" id="button1">Exercise 1</a>
+<a href="Lab3/index_exercise2.html" class="button" id="button2">Exercise 2</a>
+<a href="Lab3/index_exercise3.html" class="button" id="button3">Exercise 3</a>
+<a href="Lab3/index_exercise4.html" class="button" id="button4">Exercise 4</a>
 
+
+<br><br><br><hr><br> 
+<h1> EECS 448  &mdash;  Lab 4</h1>
+<br>
+<a href="Lab4/index_exercise1.html" class="button" id="button1">Exercise 1</a>
+<a href="Lab4/index_exercise2.html" class="button" id="button2">Exercise 2</a>
+<a href="Lab4/index_exercise3.html" class="button" id="button3">Exercise 3</a>
+
+</center>
 </body>
 </html>
