--- a/Lab4/index_exercise3.html
+++ b/Lab4/index_exercise3.html
@@ -12,7 +12,6 @@
 	<link href="store_style.css"
 		rel = "stylesheet"
 		type = "text/css"/>
-	<?php include 'customerBackend.php';?>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>EECS 448 - Exercise 1</title>
 </head>
@@ -20,7 +19,7 @@
 <body>
 	<center><h2>Welcome to the Online Store!</h2>
 	
-	<br><br>
+	<br>
 	<table>
 		<tr> 
 			<td><center> Enter username: </center></td>
@@ -28,8 +27,9 @@
 			<td><center> Enter password: </center></td>
 		</tr>
 		<tr>
-			<td> <form id="form1"><input type="text" name="username"> </td>
-			<td> &nbsp </td>
+			<td> <form action="customerBackend.php" method="post" id="form1" >
+			<input type="text" name="username"> </td>
+		 	<td> &nbsp </td>
 			<td> <input type="password" name="password"> </td>
 		
 		</tr></table>
@@ -42,28 +42,29 @@
 		<tr>
 			<td> <center> Strawberry ($1.00 each)</center></td>
 			<td> <center> <input size="5" type="text" name="strawberry"> </td> </center></td>
-			<td> <center> Free, 7 day delivery <input type="radio" name="delivery" id="free">  
+			<td> <center> Free, 7 day delivery <input type="radio" name="delivery" id="free" value="Free Delivery">  
 				</center></td>
 		</tr><tr>
 			<td> <center> Banana ($3.00 each)</center></td>
 			<td> <center><input size="5" type="text" name="banana" id="banana"> </td> </center></td>
-			<td> <center> $50.00, overnight delivery <input type="radio" name="delivery" 	id = "overnight">  
+			<td> <center> $50.00, overnight delivery <input type="radio" name="delivery" 	id = "overnight" value="Overnight Delivery">  
 					</center></td>
 
 </tr><tr>
 			<td> <center> Watermelon  ($5.00 each)</center></td>
 			<td> <center> <input size="5" type="text" name="watermelon" 
 	id="watermelon"> </td> </center></td>
-			<td> <center> $5.00, 3 day delivery <input type="radio" name="delivery" 	id = "3day">  
+			<td> <center> $5.00, 3 day delivery <input type="radio" name="delivery" 	id = "3day" value="3 Day Delivery">  
 					</center></td>
 
-	</form>
+	
 	</table>
 	<br><br>
 	<table>
 		<tr> <td><button onclick="reset()" type="button"> Reset </button> </td>
-		<td><button onclick="order()" type="button"> Place order</button></td> </tr>
+		<td> <button type="submit" onclick="return order()">Submit</button></td>  </tr>
 	</table>
+	</form>
 	</center>
 	
 </body>
