Attempt to delete unwanted files from commit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="col-sm-8">
       <br><br><br>
       <center><font size = "6">Victor Luiz da Silva</font></center>
-      <p align =  "center"><font size = "4"><a href="http://github.com/vlbpdasilva"> Github </a></font</p>
+      <p align =  "center"><font size = "4"><a href="http://github.com/vlbpdasilva"> Github </a>
+      </font</p>
       
     </div>
   </div>
@@ -50,6 +51,12 @@
 <a href="Lab4/index_exercise1.html" class="button" id="button1">Exercise 1</a>
 <a href="Lab4/index_exercise2.html" class="button" id="button2">Exercise 2</a>
 <a href="Lab4/index_exercise3.html" class="button" id="button3">Exercise 3</a>
+
+<br><br><br><hr><br> 
+<h1> EECS 448  &mdash;  Lab 5</h1>
+<br>
+<a href="Lab5/CreateUser.html" class="button" id="button1">MySQL database exercise</a>
+
 
 </center>
 </body>
