Finish working on Lab 5

--- a/Lab5/CreateUser.html
+++ b/Lab5/CreateUser.html
@@ -12,16 +12,16 @@
 <center>
 
     <h1> &nbsp; &nbsp; User creation interface</h1>
+    <h2> Use this to create a new user if you don't yet have one </h2>
     
     <form action="CreateUser.php" method="post" id="form1" >
 	<input type="text" name="username" placeholder="Enter new username">
 	<br><br>
-	<button class="button" type="submit">Submit</button>
+	<button class="button" id = "button2" type="submit">Submit</button>
 	</form>
 
 	<br><br>
 	
-
 	
 </center>
 </body>
